# sh_school_015

./: -r  .flake8  .gitattributes  .gitignore  .output.txt  .pre-commit-config.yaml  ALL_PAGES_IMPROVED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_ANALYSIS_REPORT.md  DATABASE_IMPROVEMENTS_SUMMARY.md  DESIGN_STANDARDS.md  IMPROVEMENTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_PREVIEW.html  RTL_EXPLANATION.md  SECURITY.md  TEST_DAY_CONVERSION.md  TEST_RTL.html  Web.config  backup_sh_school.dump  conftest.py  gen_index.py  index.html  main.ts  manage.py  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  requirements_clean.txt  requirements_temp.txt  requirements_unix.txt  sitecustomize.py  weekly.json  الصلاحياتRBAC.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
DOC/: COMMANDS_HUB.md  COMMANDS_ar.md  DISCIPLINE_CATALOG.md  GETTING_STARTED_ar.md  NEXT_CARD_PLAN_ar.md  NEXT_STEPS_WING_SUPERVISOR.md  OpenAPI_RTL.html  PLAN_NextSteps_ar.md  RBAC.md  RBAC_SEEDING.md  SECRETS_AND_ENV_ar.md  SECURE_IMPLEMENTATION_PLAN_ar.md  STATUS_PROGRESS_ar.md  STRATEGY_2025_PRO_ar.md  Strategic_Plan_Shahania_2025_RTL.html  Unified_Maroon_RTL.html  WingSupervisor_Cards_Content.md  WingSupervisor_TestPlan.md  error.txt  how_to_migrate_again_ps.txt  implementation_plan_maroon.html  manifest.webmanifest  school_platform_tech_stack.md  smart_school_plan_professional.html  خطة_التطوير_الاحترافية.md  خطة_تنفيذ_متسلسلة.md
assets/: educational-icons-demo.html  site.webmanifest
backend/: ensure_superuser.py  manage.py  requirements.txt  schema.yaml
backups/: pg_backup_sh_school_20251002_211348.sql  pg_backup_sh_school_20251002_212255.sql  pg_backup_sh_school_20251002_213316.sql  pg_backup_sh_school_20251002_215734.sql  pg_backup_sh_school_20251003_070104.sql  pg_backup_sh_school_20251003_073714.sql  pg_backup_sh_school_20251003_142027.sql  pg_backup_sh_school_20251003_153856.sql  pg_backup_sh_school_20251006_134849.sql  pg_backup_sh_school_20251006_192318.sql  pg_backup_sh_school_20251006_225451.sql  pg_backup_sh_school_20251007_163720.sql  pg_backup_sh_school_20251007_171607.sql  pg_backup_sh_school_20251007_191449.sql  pg_backup_sh_school_20251010_133444.sql  pg_backup_sh_school_20251010_144522.sql  pg_backup_sh_school_20251011_170018.sql
docs/: DB_SETUP_AR.md  INCIDENT_LIFECYCLE.md  QUALITY_AUDIT.md  quick_commands_ar.md
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.json  ICONS_GUIDE.md  README.md  README_DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vite.dev.fallback.mjs  vitest.config.ts
infra/: README.md  docker-compose.yml
scripts/: backend_run.ps1  check_openapi.py  container_new.ps1  db_backup.ps1  db_reset.ps1  db_restore.ps1  db_up.ps1  dev_all.ps1  dev_checks.ps1  dev_setup.ps1  dev_smoke.ps1  dev_up.ps1  diag_incidents.ps1  discipline_import.ps1  discipline_smoke.ps1  docker_diag.ps1  ensure_discipline_data.ps1  ensure_superuser.ps1  exec_hub.ps1  fe_fix_nodemodules.ps1  fix_db.ps1  full_audit.ps1  git_force_publish.ps1  history_smoke.ps1  import_backup.ps1  install_deps.ps1  load_discipline_catalog.ps1  login_test.ps1  make_dev_cert.ps1  ops_run.ps1  pg_helpers.ps1  preflight.ps1  quality_checks.ps1  recover_access.ps1  recover_env.ps1  rq_worker.ps1  (+14 more)
(+501 files in other folders)
